// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering title with just inserting functionality 1`] = `
<div
  className="title-container"
>
  <button
    className="APMButton insert-btn"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-plus"
    />
     Add Item
  </button>
</div>
`;

exports[`Rendering title with just the title 1`] = `
<div
  className="title-container"
>
  <h2
    className="title"
  >
    test
  </h2>
</div>
`;

exports[`Rendering with both title and insertability 1`] = `
<div
  className="title-container"
>
  <h2
    className="title"
  >
    test
  </h2>
  <button
    className="APMButton insert-btn"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-plus"
    />
     Add Item
  </button>
</div>
`;
